<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">
    <EditText
        android:id="@+id/registration_input_id"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/id"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/start_page_blue_color"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registration_id_check"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/start_page_blue_rounded_button"
        android:fontFamily="@font/app_main_font"
        android:text="@string/regist_id_check"
        android:textColor="@color/white"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@id/registration_input_id"
        app:layout_constraintTop_toBottomOf="@id/registration_input_id" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/start_page_blue_color"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@id/registration_id_check"
        app:layout_constraintTop_toBottomOf="@id/registration_id_check" />

    <EditText
        android:id="@+id/registration_repassword"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/repassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/start_page_blue_color"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@id/registration_password"
        app:layout_constraintTop_toBottomOf="@id/registration_password" />

    <EditText
        android:id="@+id/registration_name"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/regist_name"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/start_page_blue_color"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@id/registration_repassword"
        app:layout_constraintTop_toBottomOf="@id/registration_repassword" />

    <EditText
        android:id="@+id/registration_contact"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/regist_contact"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/start_page_blue_color"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@id/registration_name"
        app:layout_constraintTop_toBottomOf="@id/registration_name" />

    <Button
        android:id="@+id/registration_regist_button"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/start_page_blue_rounded_button"
        android:fontFamily="@font/app_main_font"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@id/registration_contact"
        app:layout_constraintTop_toBottomOf="@id/registration_contact" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_regist_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

