<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ediya_blue"
    tools:context=".MainActivity">

    <!--  뒤로가기 화살표  -->
    <ImageButton
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:background="@null"
        android:src="@drawable/ic_arrow_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <!--초기페이지 이디야 로고-->

    <ImageView
        android:id="@+id/ediya_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ediya_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">


        <EditText
            android:id="@+id/regist_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/maruburi"
            android:hint="@string/id"
            android:padding="@dimen/rounded_padding"
            android:textAlignment="center"
            android:textColor="@color/ediya_blue"
            android:textColorHint="@color/ediya_blue"
            android:textSize="@dimen/loginpage_textsize" />

        <Button
            android:id="@+id/regist_id_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_rounded_button"
            android:fontFamily="@font/maruburi"
            android:text="@string/regist_id_check"
            android:textColor="@color/white"
            android:textSize="@dimen/loginpage_textsize" />

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/maruburi"
            android:hint="@string/password"
            android:padding="@dimen/rounded_padding"
            android:textAlignment="center"
            android:textColor="@color/ediya_blue"
            android:textColorHint="@color/ediya_blue"
            android:textSize="@dimen/loginpage_textsize" />

        <EditText
            android:id="@+id/reigst_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/maruburi"
            android:hint="@string/repassword"
            android:padding="@dimen/rounded_padding"
            android:textAlignment="center"
            android:textColor="@color/ediya_blue"
            android:textColorHint="@color/ediya_blue"
            android:textSize="@dimen/loginpage_textsize" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_rounded_button"
            android:fontFamily="@font/maruburi"
            android:padding="@dimen/rounded_padding"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="@dimen/loginpage_textsize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>