<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.3">


    <EditText
        android:id="@+id/login_input_id"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/id"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/ediya_blue"
        android:textColorHint="@color/ediya_blue"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_input_password"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/app_main_font"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/ediya_blue"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@+id/login_input_id"
        app:layout_constraintTop_toBottomOf="@+id/login_input_id" />

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="@dimen/rounded_rectangle_width"
        android:layout_height="@dimen/rounded_rectangle_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_rounded_button"
        android:fontFamily="@font/app_main_font"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/loginpage_rectangle_textsize"
        app:layout_constraintStart_toStartOf="@+id/login_input_password"
        app:layout_constraintTop_toBottomOf="@+id/login_input_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/login_login_button"
        app:layout_constraintTop_toBottomOf="@id/login_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
