<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/basket_option_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:background="@drawable/option_change_border">

        <TextView
            android:id="@+id/basket_option_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/maruburi"
            android:text="@string/option_change"
            android:textColor="@color/main_text_color"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/basket_option_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_option_change_x_mark"
            app:layout_constraintBottom_toBottomOf="@+id/basket_option_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/basket_option_textview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/basket_option_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--  온도 선택 -->

                <RadioGroup
                    android:id="@+id/basket_option_hot_ice_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/basket_option_hot_radio_button"
                        android:layout_width="@dimen/hot_btn_width"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:background="@drawable/hot_radiobutton_background"
                        android:button="@null"
                        android:fontFamily="@font/maruburi"
                        android:paddingVertical="10dp"

                        android:text="@string/hot"
                        android:textAlignment="center"
                        android:textColor="@drawable/hot_cold_radiobutton_text"
                        android:textSize="@dimen/option_btn_text_size"
                        />


                    <RadioButton
                        android:id="@+id/basket_option_ice_radio_button"
                        android:layout_width="@dimen/hot_btn_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:background="@drawable/cold_radiobutton_background"
                        android:button="@null"
                        android:fontFamily="@font/maruburi"
                        android:paddingVertical="10dp"
                        android:text="@string/ice"
                        android:textAlignment="center"
                        android:textColor="@drawable/hot_cold_radiobutton_text"
                        android:textSize="@dimen/option_btn_text_size"
                        />


                </RadioGroup>
                <!--  사이즈 선택-->
                <TextView
                    android:id="@+id/basket_option_textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/maruburi"
                    android:text="@string/size"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/basket_option_hot_ice_radio_group"
                    app:layout_constraintVertical_bias="0">

                </TextView>

                <RadioGroup
                    android:id="@+id/basket_option_size_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/basket_option_textView5"
                    app:layout_constraintVertical_bias="0">

                    <RadioButton
                        android:id="@+id/basket_option_tall_radio_button"
                        android:layout_width="@dimen/size_radio_btn_width"
                        android:layout_height="@dimen/size_radio_btn_height"
                        android:background="@drawable/size_radiobutton_background"
                        android:button="@null"
                        android:fontFamily="@font/maruburi"
                        android:text="@string/tall"
                        android:textAlignment="center"
                        android:textColor="@drawable/size_radiobutton_text"
                        android:textSize="@dimen/option_btn_text_size"/>

                    <RadioButton
                        android:id="@+id/basket_option_grande_radio_button"
                        android:layout_width="@dimen/size_radio_btn_width"
                        android:layout_height="@dimen/size_radio_btn_height"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/size_radiobutton_background"
                        android:button="@null"
                        android:fontFamily="@font/maruburi"
                        android:text="@string/grande"
                        android:textAlignment="center"
                        android:textColor="@drawable/size_radiobutton_text"
                        android:textSize="@dimen/option_btn_text_size" />

                    <RadioButton
                        android:id="@+id/basket_option_Venti_radio_button"
                        android:layout_width="@dimen/size_radio_btn_width"
                        android:layout_height="@dimen/size_radio_btn_height"
                        android:background="@drawable/size_radiobutton_background"
                        android:button="@null"
                        android:fontFamily="@font/maruburi"
                        android:text="@string/venti"
                        android:textAlignment="center"
                        android:textColor="@drawable/size_radiobutton_text"
                        android:textSize="@dimen/option_btn_text_size"
                        />

                </RadioGroup>

                <!--  컵선택-->
                <TextView
                    android:id="@+id/basket_option_textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/maruburi"
                    android:text="@string/cup"
                    android:textColor="@color/main_text_color"
                    android:textSize="@dimen/option_btn_text_size"
                    app:layout_constraintStart_toStartOf="@+id/basket_option_textView5"
                    app:layout_constraintTop_toBottomOf="@+id/basket_option_size_radio_group">

                </TextView>

                <RadioGroup
                    android:id="@+id/basket_option_cup_choice_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/basket_option_textView6">

                    <RadioButton
                        android:id="@+id/basket_option_store_cup"
                        android:layout_width="@dimen/cup_radio_btn_width"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cup_radiobutton_background"
                        android:paddingVertical="10dp"
                        android:button="@null"
                        android:fontFamily="@font/maruburi"
                        android:text="@string/store"
                        android:textAlignment="center"
                        android:textColor="@drawable/cup_radiobutton_text"
                        android:textSize="18sp">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/basket_option_personal_cup"
                        android:layout_width="@dimen/cup_radio_btn_width"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:background="@drawable/cup_radiobutton_background"
                        android:button="@null"
                        android:checked="false"
                        android:fontFamily="@font/maruburi"
                        android:text="@string/personal"
                        android:textAlignment="center"
                        android:textColor="@drawable/cup_radiobutton_text"
                        android:textSize="18sp" />


                    <RadioButton
                        android:id="@+id/basket_option_disposable_cup"
                        android:layout_width="@dimen/cup_radio_btn_width"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cup_radiobutton_background"
                        android:paddingVertical="10dp"
                        android:button="@null"
                        android:checked="false"
                        android:fontFamily="@font/maruburi"
                        android:text="@string/disposable"
                        android:textAlignment="center"
                        android:textColor="@drawable/cup_radiobutton_text"
                        android:textSize="18sp" />


                </RadioGroup>
                <!--샷 추가-->
                <TextView
                    android:id="@+id/basket_option_textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/maruburi"
                    android:text="@string/shot"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/basket_option_textView6"
                    app:layout_constraintTop_toBottomOf="@+id/basket_option_cup_choice_radio_group" />

                <LinearLayout
                    android:id="@+id/basket_option_linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/basket_option_textView7">

                    <ImageButton
                        android:id="@+id/basket_option_shot_minus_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/main_background_color"
                        android:src="@drawable/ic_minus_icon" />

                    <TextView
                        android:id="@+id/basket_option_shot_num_textview"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/round_circle_background"
                        android:fontFamily="@font/maruburi"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/main_text_color"
                        android:textSize="36sp" />

                    <ImageButton
                        android:id="@+id/basket_option_shot_plus_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/main_background_color"
                        android:src="@drawable/ic_plus_icon" />
                </LinearLayout>

                <!--시럽추가 -->
                <TextView
                    android:id="@+id/basket_option_textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/maruburi"
                    android:text="@string/syrup"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/basket_option_textView7"
                    app:layout_constraintTop_toBottomOf="@+id/basket_option_linearLayout4" />

                <LinearLayout
                    android:id="@+id/basket_option_syrup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/basket_option_textView8">

                    <ImageButton
                        android:id="@+id/basket_option_syrup_minus_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/main_background_color"
                        android:src="@drawable/ic_minus_icon" />

                    <TextView
                        android:id="@+id/basket_option_syrup_num_textview"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/round_circle_background"
                        android:fontFamily="@font/maruburi"
                        android:text="0"
                        android:textColor="@color/main_text_color"
                        android:gravity="center"
                        android:textSize="36sp" />

                    <ImageButton
                        android:id="@+id/basket_option_syrup_plus_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/main_background_color"
                        android:src="@drawable/ic_plus_icon" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:background="@drawable/top_blueline"
        android:gravity="center">
        <Button
            android:id="@+id/basket_option_change_complete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:text="@string/change_complete"
            android:background="@drawable/blue_rounded_button"
            android:textColor="@color/white"
            android:fontFamily="@font/maruburi"/>
    </LinearLayout>

</LinearLayout>